<?xml version="1.0"?>
<package format="2">
  <name>t265_jump</name>
  <version>0.0.1</version>
  <description>This package contains an example of jumping phenomena of t265 frames</description>

  <maintainer email="shinjo@jsk.imi.i.u-tokyo.ac.jp">sktometometo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>jsk_rviz_plugins</exec_depend>

  <export>
  </export>
</package>
